--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build --outDir dist",
+    "preview": "vite preview",
+    "deploy:vercel": "vite build && vercel --prod",
+    "deploy:netlify": "vite build && netlify deploy --prod",
+    "deploy:github": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "@google/genai": "^1.16.0",
@@ -16,6 +19,8 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.2",
+    "gh-pages": "^6.1.1",
+    "terser": "^5.43.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
