--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build --outDir dist",
     "preview": "vite preview",
+    "vercel-build": "vite build",
     "deploy:vercel": "vite build && vercel --prod",
     "deploy:netlify": "vite build && netlify deploy --prod",
     "deploy:github": "vite build && gh-pages -d dist"
